# lamella.prespectus

./: CMakeLists.txt
src/: main.c  main.h  mesh.c  mesh.h  shaders.c  shaders.h
